--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!-- Custom Color -->
+    <color name="dark_blue">#4C4E6B</color>
+    <color name="background_light">#F9F8F9</color>
 </resources>
