--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -4,18 +4,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/card_rounded">
+    android:background="@drawable/card_rounded"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
-    <ImageView
-        android:id="@+id/iv_icon"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        app:layout_constraintDimensionRatio="1:0.5"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_icon"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="24dp"
         app:layout_constraintEnd_toStartOf="@id/tv_title"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_title"
@@ -30,34 +41,71 @@
         android:textStyle="bold"
         android:textColor="@color/dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_icon"
+        app:layout_constraintStart_toEndOf="@id/cv_icon"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Title"/>
 
-    <TextView
-        android:id="@+id/tv_subtitle1"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/ll_subtitle1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Author"
-        android:textColor="@color/dark_blue"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@id/tv_subtitle2"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/iv_icon"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
-
-    <TextView
-        android:id="@+id/tv_subtitle2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textSize="14sp"
-        android:textColor="@color/dark_blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_subtitle1"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/cv_icon"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
-        android:text="Date"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp">
+
+        <ImageView
+            android:id="@+id/ic_person"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_person" />
+
+        <TextView
+            android:id="@+id/tv_subtitle1"
+            android:layout_width="110dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="Author"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/dark_blue"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@id/tv_subtitle2"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toEndOf="@+id/cv_icon"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_subtitle2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/ll_subtitle1"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        android:layout_marginTop="10dp">
+
+        <ImageView
+            android:id="@+id/ic_calendar"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_calendar" />
+
+        <TextView
+            android:id="@+id/tv_subtitle2"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textSize="14sp"
+            android:textColor="@color/dark_blue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ll_subtitle1"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            android:text="Date"/>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
